# my-pytest-request-homework

./: .gitignore  README.md  pyproject.toml
exercise_3/: conftest.py  constants.py  test_items.py
src/api/: item_api_client.py
src/data_models/: item_request_data_model.py  item_response_data_model.py
src/enums/: data.py  enums.py  headers.py  urls.py
src/scenarios/: item_scenarios.py
src/utils/: validate_item_response.py
tests/: conftest.py  test_create_items_for_me.py  test_items.py
